--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -26,3 +26,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+a {
+  text-decoration: none;
+}
+
+a:active {
+  background-color: none;
+}
